@@ -1,7 +1,26 @@
+dnl Configuration for the GNU libasprintf library
+dnl Copyright (C) 2002-2003 Free Software Foundation, Inc.
+dnl
+dnl This program is free software; you can redistribute it and/or modify
+dnl it under the terms of the GNU General Public License as published by
+dnl the Free Software Foundation; either version 2, or (at your option)
+dnl any later version.
+dnl
+dnl This program is distributed in the hope that it will be useful,
+dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
+dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+dnl GNU General Public License for more details.
+dnl
+dnl You should have received a copy of the GNU General Public License
+dnl along with this program; if not, write to the Free Software
+dnl Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
+
 dnl Process this file with autoconf to produce a configure script.
+
 AC_PREREQ(2.52)
 AC_INIT
 AC_CONFIG_SRCDIR(vasprintf.c)
+AC_CONFIG_AUX_DIR(../../config)
 AM_INIT_AUTOMAKE(libasprintf, 1.0)
 AM_CONFIG_HEADER(config.h)
 
@@ -37,7 +56,18 @@ AC_CHECK_TYPES(ptrdiff_t)
 gt_TYPE_INTMAX_T
 
 dnl Checks for library functions.
-gl_FUNC_ALLOCA
+
+AC_FUNC_ALLOCA
+dnl Define an additional variable used in the Makefile substitution.
+AC_EGREP_CPP([Need own alloca], [
+#if defined __GNUC__ || defined _MSC_VER || !HAVE_ALLOCA_H
+  Need own alloca
+#endif
+  ],
+  ALLOCA_H=alloca.h,
+  ALLOCA_H=)
+AC_SUBST([ALLOCA_H])
+
 AC_CHECK_FUNCS([snprintf vasprintf])
 
 dnl Check for tools needed for formatting the documentation.
@@ -48,7 +78,6 @@ AC_PATH_PROG(PERL, perl, $ac_aux_dir_abs/missing perl)
 
 AC_CONFIG_FILES([Makefile],
                 [FIX_MAKEFILE_COMPILE([Makefile])
-                 FIX_MAKEFILE_DISTRIB([Makefile])
                  FIX_MAKEFILE_INFO([Makefile])])
 
 AC_OUTPUT
