@@ -1,3 +1,8 @@
+2003-02-12  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (docdir): Use 'gettext' instead of @PACKAGE@.
+	(EXTRA_DIST): Fix typo.
+
 2003-01-12  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.am: Make use of += for variables.
